--- a/themes/ejnana/layouts/index.html
+++ b/themes/ejnana/layouts/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ಇಜ್ಞಾನ</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;700&family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style-home.css">
     <link rel="stylesheet" href="/css/style-snippet.css">
@@ -38,63 +38,64 @@
             </div>
 
 
-
             {{ range .Pages}}
-            <div class="row justify-content-between">
-                <div class="col-auto">
-                    <h2>{{ .Title }}</h1>
-                </div>
-                <div class="col-auto">
-                    <a href="{{ .RelPermalink }}">
-                        <p>ಇನ್ನಷ್ಟು</p>
-                    </a>
-                </div>
-            </div>
-
-
-            <div class="horizontal-scroll-row">
-                {{ range .Pages}}
-                <!-- Card -->
-                <div class="horizontal-scroll-col">
-                    <div class="parent">
-                        <div class="card">
-                            {{ if .Params.image }}
-                                <img src="{{ .Params.image }}" class="card-img-top" alt="...">
-                            {{ else }}
-                                <img src="/images/image.svg" class="card-img-top" alt="...">
-                            {{ end }}
-                            <div class="card-body">
-                                <a href="{{ .RelPermalink }}001" class="stretched-link">
-                                    <h4 class="card-title">{{ .Title }} →</h4>
-                                </a>
-                                <p class="card-text">Subtitle</p>
-                            </div>
-                        </div>
-                        <div class="card child1">
-                        </div>
-                        <div class="card child2">
-                        </div>
-                        <div class="card snippet-count">
-                            {{ len (where .Site.RegularPages "Dir" "=" .Dir ) }} ತುಣುಕುಗಳು
-                        </div>
+            <div class="mb-5"> 
+                <div class="row justify-content-between">
+                    <div class="col-auto">
+                        <h2>{{ .Title }}</h1>
+                    </div>
+                    <div class="col-auto">
+                        <a href="{{ .RelPermalink }}">
+                            <p>ಇನ್ನಷ್ಟು</p>
+                        </a>
                     </div>
                 </div>
-                {{ end }}
-                <!-- See all -->
-                <div class="col-6 horizontal-scroll-col">
-                    <a href="{{ .RelPermalink }}">
-                        <p>ಎಲ್ಲವನ್ನೂ ನೋಡಿ →</p>
-                    </a>
-                </div>
-            </div>
 
-            
+
+                <div class="horizontal-scroll-row">
+                    {{ range .Pages}}
+                    <!-- Card -->
+                    <div class="horizontal-scroll-col">
+                        <div class="parent">
+                            <div class="card" style="width: min-content;">
+                                {{ if .Params.image }}
+                                    <img src="{{ .Params.image }}" class="card-img-top" alt="...">
+                                {{ else }}
+                                    <img src="/images/image.svg" class="card-img-top" alt="...">
+                                {{ end }}
+                                <div class="card-body">
+                                    <a href="{{ .RelPermalink }}001" class="stretched-link">
+                                        <h4 class="card-title">{{ .Title }} <span style="font-family: 'Inter', sans-serif; font-weight: 600;">-></span></h4>
+                                    </a>
+                                    <p class="card-text">Subtitle</p>
+                                </div>
+                            </div>
+                            <div class="card child1">
+                            </div>
+                            <div class="card child2">
+                            </div>
+                            <div class="card snippet-count">
+                                {{ len (where .Site.RegularPages "Dir" "=" .Dir ) }} ತುಣುಕುಗಳು
+                            </div>
+                        </div>
+                    </div>
+                    {{ end }}
+                    <!-- See all -->
+                    <div class="col-6 horizontal-scroll-col">
+                        <a href="{{ .RelPermalink }}">
+                            <p>ಎಲ್ಲವನ್ನೂ ನೋಡಿ →</p>
+                        </a>
+                    </div>
+                </div>
+            </div>  
+            {{ end }}
+            <h4 class="my-5">ಇನ್ನಷ್ಟು ವಿಷಯಗಳು ಅತೀ ಶೀಘ್ರದಲ್ಲಿ ಬರಲಿವೆ!</h4>  
         </div>
                 
-        {{ end }}
         
-        <h4 class="my-5">ಇನ್ನಷ್ಟು ವಿಷಯಗಳು ಅತೀ ಶೀಘ್ರದಲ್ಲಿ ಬರಲಿವೆ!</h4>
-        </div>
+        
+        
+    </div>
 
     </div>
 
