--- a/themes/ejnana/layouts/_default/list.html
+++ b/themes/ejnana/layouts/_default/list.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Title }} — ಇಜ್ಞಾನ</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;700&family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style-home.css">
     <link rel="stylesheet" href="/css/style-snippet.css">
@@ -33,13 +33,13 @@
                     <div class="parent mx-auto mb-5" style="width: 70%;">
                         <div class="card" style="width: 100%;">
                             {{ if .Params.image }}
-                                <img src="{{ .Params.image }}" class="card-img-top" alt="...">
+                                <img src="{{ .Params.image }}" class="card-img-top" alt="..." style="width: auto;">
                             {{ else }}
-                                <img src="/images/image.svg" class="card-img-top" alt="...">
+                                <img src="/images/image.svg" class="card-img-top" alt="..." style="width: auto;">
                             {{ end }}
                             <div class="card-body">
                                 <a href="{{ .RelPermalink }}001" class="stretched-link">
-                                    <h4 class="card-title">{{ .Title }} <span style="font-family: 'Inter', sans-serif; font-weight: 600;">-></span></h4>
+                                    <h4 class="card-title">{{ .Title }} <span style="font-family: 'IBM Plex Sans', sans-serif;">&rarr;</span></h4>
                                 </a>
                                 <p class="card-text">Subtitle</p>
                             </div>
