--- a/themes/ejnana/layouts/partials/footer.html
+++ b/themes/ejnana/layouts/partials/footer.html
@@ -4,21 +4,21 @@
             {{ if .NextInSection }}
                 <a href="{{with .NextInSection}}{{.Permalink}}{{ end }}">
                     <div><img src="/images/previous.svg" alt=""></div>
-                    <div>ಹಿಂದಿನ ತುಣುಕು</div>
+                    <div class="primary-font-colour">ಹಿಂದಿನ ತುಣುಕು</div>
                 </a>
             {{ end }}
         </div>
         <div class="col-4">
             <a href="/">
                 <div><img src="/images/home.svg" alt=""></div>
-                <div style="padding-top: 2px;">ಮುಖಪುಟ</div>
+                <div class="primary-font-colour" style="padding-top: 2px;">ಮುಖಪುಟ</div>
             </a>
         </div>
         <div class="col-4">
             {{ if .PrevInSection }}
                 <a href="{{with .PrevInSection}}{{.Permalink}}{{ end }}">
                     <div><img src="/images/next.svg" alt=""></div>
-                    <div>ಮುಂದಿನ ತುಣುಕು</div>
+                    <div class="primary-font-colour">ಮುಂದಿನ ತುಣುಕು</div>
                 </a>
             {{ end }}
         </div>
