--- a/themes/ejnana/layouts/_default/list.html
+++ b/themes/ejnana/layouts/_default/list.html
@@ -59,7 +59,7 @@
                 <p>ಅಭಿನಂದನೆಗಳು! ನೀವು ಈಸ್ಟರ್ ಮೊಟ್ಟೆಯನ್ನು ಕಂಡುಹಿಡಿದು ಸಾಧಾರಣದವರಲ್ಲ ಎಂದು ನಿರೂಪಿಸಿದಕ್ಕೆ!</p>
                 <p class="fw-bold">ಈಗ ಮುಖಪುಟಕ್ಕೆ ಹೋಗಿ ಅಥವಾ ಬಂದಲ್ಲಿಗೆ ಹಿಂದಿರುಗಿ  :)</p>
                 <img style="max-width: 100%;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Easter_Eggs.JPG/800px-Easter_Eggs.JPG" alt="easter-egg">
-                <p style="font-family: 'IBM Plex Sans', sans-serif;"><a class="sub-title text-black-50" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Easter_Eggs.JPG/800px-Easter_Eggs.JPG">Image from Wikimedia Commons</a></p>
+                <p style="font-family: 'Inter', sans-serif;"><a class="sub-title" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Easter_Eggs.JPG/800px-Easter_Eggs.JPG">Image from Wikimedia Commons</a></p>
             {{ end }}
             
             {{ partial "footer.html" . }}
