--- a/themes/ejnana/layouts/partials/footer.html
+++ b/themes/ejnana/layouts/partials/footer.html
@@ -23,4 +23,7 @@
             {{ end }}
         </div>
     </div>
+    <div class="row py-1 text-center align-items-center justify-content-around">
+        <p class="m-0 primary-font-colour fw-bold">ಇದು ಗೂಗಲ್ ಕ್ರೋಮ್ ನಲ್ಲಿ ಕಂಡು ಬರುವ ಅನುವಾದಕರಿಗಾಗಿ ಕಾಯ್ದಿರಿಸಿದ ಪಟ್ಟಿ</p>
+    </div>
   </nav>
