--- a/themes/ejnana/layouts/_default/list.html
+++ b/themes/ejnana/layouts/_default/list.html
@@ -24,9 +24,9 @@
 
 <body>
     <div class="container">
-        {{ partial "header.html" . }}
+        <!-- {{ partial "header.html" . }} -->
 
-        <div class="body-wrapper-nav-compensate">
+        <div class="mt-5">
             {{ if not .Params.easterEgg }}
                 <h2 class="primary-font-colour">{{ .Params.title }}</h2>  
                 {{ range .Pages}}
@@ -61,6 +61,8 @@
                 <img style="max-width: 100%;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Easter_Eggs.JPG/800px-Easter_Eggs.JPG" alt="easter-egg">
                 <p style="font-family: 'Inter', sans-serif;"><a class="sub-title" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Easter_Eggs.JPG/800px-Easter_Eggs.JPG">Image from Wikimedia Commons</a></p>
             {{ end }}
+            
+            <div class="bottom-nav-compensate"></div>
             
             {{ partial "footer.html" . }}
         </div>
