--- a/themes/ejnana/layouts/partials/footer.html
+++ b/themes/ejnana/layouts/partials/footer.html
@@ -4,7 +4,7 @@
             {{ if .NextInSection }}
                 <a href="{{with .NextInSection}}{{.Permalink}}{{ end }}">
                     <div><img src="/images/previous.svg" alt=""></div>
-                    <div class="primary-font-colour">ಹಿಂದಿನ ತುಣುಕು</div>
+                    <div class="primary-font-colour ">ಹಿಂದಿನ ತುಣುಕು</div>
                 </a>
             {{ end }}
         </div>
@@ -24,6 +24,6 @@
         </div>
     </div>
     <div class="row py-1 text-center align-items-center justify-content-around">
-        <p class="m-0 primary-font-colour fw-bold">ಇದು ಗೂಗಲ್ ಕ್ರೋಮ್ ನಲ್ಲಿ ಕಂಡು ಬರುವ ಅನುವಾದಕರಿಗಾಗಿ ಕಾಯ್ದಿರಿಸಿದ ಪಟ್ಟಿ</p>
+        <p class="m-0 primary-font-colour sub-title">ಇದು ಗೂಗಲ್ ಕ್ರೋಮ್ ನಲ್ಲಿ ಕಂಡು ಬರುವ ಅನುವಾದಕರಿಗಾಗಿ ಕಾಯ್ದಿರಿಸಿದ ಪಟ್ಟಿ</p>
     </div>
   </nav>
