--- a/themes/ejnana/layouts/index.html
+++ b/themes/ejnana/layouts/index.html
@@ -75,7 +75,7 @@
                             <div class="card child2">
                             </div>
                             <div class="card snippet-count">
-                                {{ len (where .Site.RegularPages "Dir" "=" .Dir ) }} ತುಣುಕುಗಳು
+                                {{ len (where .Site.RegularPages ".Params.collection" "=" .Params.collection ) }} ತುಣುಕುಗಳು
                             </div>
                         </div>
                     </div>
