--- a/themes/ejnana/layouts/_default/single.html
+++ b/themes/ejnana/layouts/_default/single.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Title }} — ಇಜ್ಞಾನ</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;700&family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style-home.css">
     <link rel="stylesheet" href="/css/style-snippet.css">
@@ -60,11 +60,35 @@
                 {{ end }}
             </div>
 
+
             {{ if not .PrevInSection }}
                 {{ $currentWeight := .Parent.Params.weight }}                
                 {{ $parentPages := .CurrentSection.Parent }}
                     {{ range where $parentPages.Pages ".Weight" (add ($currentWeight) 1) }}
-                        <a href="{{ .Permalink }}/001">{{.Title}}</a>
+                        <hr class="mx-auto my-5" style="width: 50%;">
+                        <h4 class="primary-font-colour my-4">ಓದುವುದನ್ನು ಮುಂದುವರೆಸಿ</h4>
+                        <div class="parent" style="width: 70%;">
+                            <div class="card" style="width: 100%;">
+                                {{ if .Params.image }}
+                                    <img src="{{ .Params.image }}" class="card-img-top" alt="..." style="width: auto;">
+                                {{ else }}
+                                    <img src="/images/image.svg" class="card-img-top" alt="..." style="width: auto;">
+                                {{ end }}
+                                <div class="card-body">
+                                    <a href="{{ .RelPermalink }}001" class="stretched-link">
+                                        <h4 class="card-title primary-font-colour">{{ .Title }} <span class="inter-ligatures">-></span></h4>
+                                    </a>
+                                    <p class="card-text">Subtitle</p>
+                                </div>
+                            </div>
+                            <div class=" card child1">
+                            </div>
+                            <div class=" card child2">
+                            </div>
+                            <div class=" card snippet-count">
+                                {{ len (where .Site.RegularPages ".Params.collection" "=" .Params.collection ) }} ತುಣುಕುಗಳು
+                            </div>
+                        </div>
                     {{ end }}
                 </div>
             {{ end }}
