--- a/themes/ejnana/layouts/_default/single.html
+++ b/themes/ejnana/layouts/_default/single.html
@@ -65,7 +65,7 @@
                 {{ $currentWeight := .Parent.Params.weight }}                
                 {{ $parentPages := .CurrentSection.Parent }}
                     {{ range where $parentPages.Pages ".Weight" (add ($currentWeight) 1) }}
-                        <hr class="mx-auto my-5" style="width: 50%;">
+                        <hr class="mx-auto mt-3 mb-5" style="width: 50%;">
                         <h4 class="primary-font-colour my-4">ಓದುವುದನ್ನು ಮುಂದುವರೆಸಿ</h4>
                         <div class="parent" style="width: 70%;">
                             <div class="card" style="width: 100%;">
