--- a/themes/ejnana/layouts/_default/single.html
+++ b/themes/ejnana/layouts/_default/single.html
@@ -110,7 +110,18 @@
         })();
       </script>
 
-    <!-- <script src="/js/script.js"></script> -->
+    <script>
+        document.querySelector('#share-link').addEventListener('click', function () {
+                if (navigator.share) {
+                    navigator.share({
+                        title: '{{ .Title }}',
+                        url: '{{ .Permalink }}'
+                    })
+                        .then(() => prompt('Successful share'))
+                        .catch((error) => prompt('Error sharing', error));
+                }
+            });
+    </script>
 
     
 </body>
