Update to working version of WebShare API

--- a/themes/ejnana/layouts/_default/single.html
+++ b/themes/ejnana/layouts/_default/single.html
@@ -117,8 +117,8 @@
                         title: '{{ .Title }}',
                         url: '{{ .Permalink }}'
                     })
-                        .then(() => prompt('Successful share'))
-                        .catch((error) => prompt('Error sharing', error));
+                        .then(() => console.log('Successful share'))
+                        .catch((error) => console.log('Error sharing', error));
                 }
             });
     </script>
