Add continue reading button and fresh generic image

--- a/themes/ejnana/layouts/_default/single.html
+++ b/themes/ejnana/layouts/_default/single.html
@@ -121,6 +121,8 @@
                         .catch((error) => console.log('Error sharing', error));
                 }
             });
+
+        localStorage.setItem('url','{{ .Permalink }}');
     </script>
 
     
