Remove subtitle, add coronalogy content and UI updates

--- a/themes/ejnana/layouts/_default/single.html
+++ b/themes/ejnana/layouts/_default/single.html
@@ -66,7 +66,8 @@
                 {{ $parentPages := .CurrentSection.Parent }}
                     {{ range where $parentPages.Pages ".Weight" (add ($currentWeight) 1) }}
                         <hr class="mx-auto mt-3 mb-5" style="width: 50%;">
-                        <h4 class="primary-font-colour my-4">ಓದುವುದನ್ನು ಮುಂದುವರೆಸಿ</h4>
+                        <h4 class="primary-font-colour my-4">ಮುಂದಿನ ಸಂಗ್ರಹ
+                            </h4>
                         <div class="parent" style="width: 70%;">
                             <div class="card" style="width: 100%;">
                                 {{ if .Params.image }}
@@ -78,7 +79,7 @@
                                     <a href="{{ .RelPermalink }}001" class="stretched-link">
                                         <h4 class="card-title primary-font-colour">{{ .Title }} <span class="inter-ligatures">-></span></h4>
                                     </a>
-                                    <p class="card-text">Subtitle</p>
+                                    <!-- <p class="card-text">Subtitle</p> -->
                                 </div>
                             </div>
                             <div class=" card child1">
