--- a/themes/ejnana/layouts/_default/list.html
+++ b/themes/ejnana/layouts/_default/list.html
@@ -41,7 +41,7 @@
                                 <a href="{{ .RelPermalink }}001" class="stretched-link">
                                     <h4 class="card-title primary-font-colour">{{ .Title }} <span class="inter-ligatures">-></span></h4>
                                 </a>
-                                <p class="card-text">Subtitle</p>
+                                <!-- <p class="card-text">Subtitle</p> -->
                             </div>
                         </div>
                         <div class=" card child1">
