Show only three collection per topic on home page

--- a/themes/ejnana/layouts/index.html
+++ b/themes/ejnana/layouts/index.html
@@ -63,7 +63,7 @@
 
 
                 <div class="horizontal-scroll-row">
-                    {{ range .Pages}}
+                    {{ range where .Pages ".Weight" "le" 3 }}
                     <!-- Card -->
                     <div class="horizontal-scroll-col">
                         <div class="parent">
